handle setup connection from client

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,9 @@
 cmake_minimum_required(VERSION 2.6)
 project(lightx)
+
 include_directories(include)
-add_executable(lightx main.c socket.c dispatch.c server.c client.c)
+
+find_package(PkgConfig)
+pkg_check_modules(PC_XPROTO xproto)
+
+add_executable(lightx main.c socket.c dispatch.c server.c client.c xproto.c)
