--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,6 @@ include_directories(include)
 
 find_package(PkgConfig)
 pkg_check_modules(PC_XPROTO xproto)
+pkg_check_modules(PC_GLPROTO glproto)
 
-add_executable(lightx main.c socket.c dispatch.c server.c client.c xproto.c)
+add_executable(lightx main.c socket.c dispatch.c server.c client.c xproto.c glx.c)
