add null dri3 extension

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,8 @@ include_directories(include)
 find_package(PkgConfig)
 pkg_check_modules(PC_XPROTO xproto)
 pkg_check_modules(PC_GLPROTO glproto)
+pkg_check_modules(PC_DRI3PROTO dri3proto)
 
-add_executable(lightx main.c socket.c dispatch.c server.c client.c xproto.c glx.c)
+add_executable(lightx
+  main.c socket.c dispatch.c server.c client.c xproto.c glx.c 
+  dri3.c)
